--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
 <head>
   <title>{% block title %}{% endblock %}</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">   
   <link rel="stylesheet" type="text/css" href="https://sageru.org/css/MWN.css" />
   <link rel="shortcut icon" href="https://sageru.org/kareha.ico" />
   <link rel="stylesheet" type="text/css" href="styles.css">
