--- a/templates/rules.html
+++ b/templates/rules.html
@@ -3,14 +3,13 @@
 {% block content %}
 <h2>Server-wide Rules</h2>
 
-<p>The following server-wide rules apply to all channels. <b>Failure to abide by these rules will result in an immediate server-wide ban.</b></p>
-
+<p>The following server-wide rules apply to all channels. <b>Failure to abide by these rules will result in an immediate server-wide ban.</b> In addition to these rules, individual channels may have their own set of rules.</p>
 
 <ol>
-
   <li>You will not hold discussions, make requests, or link to anything that violates local or United States law.</li>
   <li>You will immediately cease and not continue to access the site if you are under the age of 18.</li>
   <li>You will not make comments that are sexual or suggestively sexual involving minors.</li>
   <li>You will not take action to disrupt the communication of other users, including flooding and attempts to acquire unauthorized privileges.</li>
 </ol>
+
 {% endblock %}
